# loefsys

./: .gitignore  README.md  pyproject.toml
loefenv/: pyvenv.cfg
loefenv/Scripts/: activate  activate.bat
loefsys/: manage.py
loefsys/loefsys/: asgi.py  settings.py  urls.py  wsgi.py
root/: manage.py
root/boats/: admin.py  models.py
root/boats/migrations/: 0001_initial.py
root/committees/: admin.py
root/committees/migrations/: 0001_initial.py  0002_alter_committeemembership_note_and_more.py  0003_alter_committeemembership_since.py
root/committees/models/: __init__.py  committee.py  committee_membership.py
root/events/: admin.py  services.py  urls.py  views.py
root/events/api/: urls.py  views.py
root/events/migrations/: 0001_initial.py  0002_alter_event_no_registration_message.py  0003_guestform.py  0004_eventregistration_guest_form.py  0005_guestcontactdetails_and_more.py  0006_alter_guestcontactdetails_user.py  0007_alter_guestcontactdetails_user.py
root/events/models/: __init__.py  event.py  event_registation.py  guest_form.py
root/groups/migrations/: 0001_initial.py  0002_board_committee_fraternity_yearclub.py
root/groups/models/: __init__.py  board.py  committee.py  fraternity.py  groups.py  membergroup.py  membergroup_membership.py  year_club.py
root/loefsys/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
root/loefsys/api/: urls.py
root/members/: admin.py  urls.py  views.py
root/members/api/: urls.py
root/reservations/: admin.py  requirements
root/users/: models.py  urls.py  views.py
root/utils/: sizes.py  snippets.py
(+33 files in other folders)
