[tool.poetry]
name = "loefsys"
version = "0.1.0"
description = ""
authors = ["mark-boute <bmark0702@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-iban = "^0.3.1"
django-extensions = "^3.2.0"
django-localflavor = "3.1"
djangorestframework = "^3.13.1"
django-phonenumber-field = "^6.3.0"
phonenumbers = "^8.12.54"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
